--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Assignment_3/assets/css/styles.css">
+    <link rel="stylesheet" href="../Assignment/assets/styles.css">
     <title>Calculator</title>
 </head>
 
@@ -51,7 +51,7 @@
 
         </form>
     </div>
-    <script src="../Assignment_3/assets/js/main.js"></script>
+    <script src="../Assignment/assets/main.js"></script>
 </body>
 
 </html>
